# vllm-xpu-kernels

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile.xpu  ERROR_MESSAGE_IMPROVEMENTS.md  KERNEL_CONFIGURATION.md  KERNEL_ERROR_QUICK_FIX.md  README.md  mll_build.sh  mll_test.sh  pyproject.toml  python.930928.json  python.945563.json  python.945614.json  requirements.txt  setup.py
.github/: actionlint.yaml
.github/workflows/: nightly-ut.yaml  pre-commit.yml  ut.yaml  wheel-per-commit.yaml
benchmark/: ANALYSIS_SYNC_IMPACT.txt  FINAL_SUMMARY.md  PR.txt  SUMMARY_THREE_WAY_COMPARISON.txt  TIMING_BREAKDOWN.md  _gdn_kernel_profile.py  bench_decode_batch.py  bench_out.txt  bench_xpu_dequantize_and_gather_k_kernel.py  benchmark_causal_conv1d.py  benchmark_compress_insert.py  benchmark_compress_insert_mxfp4.py  benchmark_concat_and_cache_mla.py  benchmark_cutlass_flash_attn_decode.py  benchmark_cutlass_flash_attn_varlen.py  benchmark_cutlass_flash_attn_window.py  benchmark_cutlass_fused_moe.py  benchmark_dynamic_per_token_scaled_fp8_quant.py  benchmark_fp32_router_gemm.py  benchmark_fp8_gemm_w8a16.py  benchmark_gated_delta_rule.py  benchmark_gdn_attn.py  benchmark_gemm_bf16xfp32.py  benchmark_gemm_onednn.py  benchmark_grouped_topk.py  benchmark_kda.py  benchmark_kda_causal_conv1d.py  benchmark_kda_gated_delta_rule.py  benchmark_layernorm.py  benchmark_lora.py  benchmark_mhc.py  benchmark_moe_align_block_size.py  benchmark_moe_sum.py  benchmark_mqa_logits.py  benchmark_multimodal_rotary_embedding.py  benchmark_paged_decode_fp8kv.py  benchmark_reshape_and_cache.py  benchmark_reshape_and_cache_flash.py  benchmark_rmsnorm.py  benchmark_rotary_embedding.py  (+15 more)
benchmark/moe/: benchmark_grouped_topk.py
benchmark/src/: flash_attn_interface_.py  fused_moe_interface_.py  get_model_config.py
build_script/: build_wheel_docker.sh  gpu_runtime_packages.json  install_gpu_runtime.sh
cmake/: utils.cmake
cmake/Modules/: FindoneDNN.cmake
csrc/: activation.cpp  arch_dispatch.h  cache.cpp  compute_slot_mapping.cpp  dispatch_utils.h  fused_minimax_m3_qknorm_rope_kv_insert.cpp  fused_qknorm_rope.cpp  head_rms_norm.cpp  kernel_dispatch.cpp  layernorm.cpp  layernorm_quant.cpp  ops.h  pos_encoding_kernels.cpp  topk_per_row.cpp  torch_bindings.cpp  utils.h
csrc/attention/: merge_attn_states.cpp
csrc/core/: registration.h
csrc/cutlass_backend/: cutlass_kernels.cpp
csrc/flash_attn/: flash_api.cpp  pytorch_shim.h
csrc/xpu/attn/xe_2/: CMakeLists.txt  attn_pch.hpp  chunk.cpp  chunk.hpp  chunk_prefill.hpp  chunk_prefill_configure.cmake  chunk_prefill_enabled_policies.hpp.in  chunk_prefill_extern.hpp  chunk_prefill_extern.hpp.in  chunk_prefill_kernel.cpp.in  chunk_prefill_kernel_template.cpp.in  chunk_prefill_utils.hpp  fmha_utils.hpp  fmha_xe2.cpp  fmha_xe2.h  paged.cpp  paged.hpp  paged_decode.hpp  paged_decode_configure.cmake  paged_decode_enabled_policies.hpp.in  paged_decode_extern.hpp  paged_decode_extern.hpp.in  paged_decode_kernel.cpp.in  paged_decode_kernel.hpp  paged_decode_kernel_template.cpp.in  paged_decode_utils.hpp  paged_decode_xe2.cpp  paged_decode_xe2.h  paged_decode_xe2_stub.cpp
csrc/xpu/attn/xe_2/collective/: chunk_prefill_epilogue.hpp  chunk_prefill_mainloop.hpp  chunk_prefill_scheduler.hpp
csrc/xpu/attn/xe_2/kernel/: chunk_prefill_kernel.hpp  paged_decode_kernel.hpp
csrc/xpu/attn/xe_2/kernel_configs/: README.md  chunk_prefill_common.conf  chunk_prefill_deepseek.conf  chunk_prefill_default.conf  chunk_prefill_llama.conf  chunk_prefill_qwen.conf  common.conf  deepseek.conf  llama.conf  paged_decode_common.conf  paged_decode_deepseek.conf  paged_decode_default.conf  paged_decode_llama.conf  paged_decode_qwen.conf  qwen.conf
csrc/xpu/cutlass_kernels/attn/: CMakeLists.txt
csrc/xpu/cutlass_kernels/attn/xe_2/: CMakeLists.txt  chunk_prefill.hpp  chunk_prefill_kernel.hpp
csrc/xpu/grouped_gemm/: CMakeLists.txt  grouped_gemm_interface.cpp  grouped_gemm_interface.h
csrc/xpu/grouped_gemm/collective/gemm/: moe_array_mma.hpp
csrc/xpu/grouped_gemm/xe_2/: CMakeLists.txt  gemm_xe2.hpp  gemm_xe2_policy.hpp  grouped_gemm_xe2.h  grouped_gemm_xe2.hpp  grouped_gemm_xe2_interface.hpp
csrc/xpu/grouped_gemm/xe_default/: CMakeLists.txt  grouped_gemm.hpp  grouped_gemm_kernel.cpp  grouped_gemm_xe_default.cpp
patches/: flash_attn_optimizations.patch
tests/: conftest.py  ops.py  register_ops.py  test_activation.py  test_activation_bak.py  test_apply_rotary_emb.py  test_cache.py  test_compress_insert.py  test_compute_slot_mapping.py  test_cp_gather_indexer_k_quant_cache.py  test_cutlass_op.py  test_deepseek_fused_indexer_q_rope_fp8.py  test_deepseek_fused_indexer_q_rope_mxfp4.py  test_deepseek_inv_rope_bf16.py  test_deepseek_inv_rope_fp8_quant.py  test_deepseek_qnorm_rope_kv_insert.py  test_deepseek_scaling_rope.py  test_exponential_2d.py  test_fp32_router_gemm.py  test_fp8_gemm_onednn.py  test_fp8_linear.py  test_fp8_quant.py  test_fused_kv_compress_norm_rope_insert_indexer_mxfp4_attn.py  test_fused_minimax_m3_qknorm_rope_kv_insert.py  test_fused_norm_quant.py  test_fused_qk_norm_rope.py  test_fused_quant_activation.py  test_gemm_bf16xfp32.py  test_get_memory_info.py  test_ggml_dequantize.py  test_grouped_topk.py  test_indexer_k_quant_and_cache.py  test_int4_gemm_onednn.py  test_int8_gemm_onednn.py  test_layernorm.py  test_layernorm_quant.py  test_lora_ops.py  test_mem_alloc.py  test_merge_attn_states.py  test_mhc.py  (+22 more)
tools/: envs.py  resolve_model_suite.py
vllm-xpu-kernels-baseline/: requirements.txt
vllm_xpu_kernels/: _C.py  _C_stable_libtorch.py  __init__.py  _extension_alias.py  _moe_C.py  _moe_C_stable_libtorch.py  _mx_utils.py  _vllm_fa2_C.py  _vllm_fa2_C_stable_libtorch.py  _xpu_C.py  _xpu_C_stable_libtorch.py  flash_attn_interface.py  flash_mla_interface.py  fused_moe_interface.py  gemm_bf16xfp32.py  gemm_interface.py  moe_utils.py  rotary.py  scaled_mm_interface.py
(+313 files in other folders)
